Bug 5155 - Spelling fix for substituted in gas-2.17.90.pot
Summary: Spelling fix for substituted in gas-2.17.90.pot
Status: RESOLVED FIXED
Alias: None
Product: binutils
Classification: Unclassified
Component: gas (show other bugs)
Version: 2.17
: P2 normal
Target Milestone: ---
Assignee: unassigned
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-10-10 16:55 UTC by Jorma Karvonen
Modified: 2007-10-11 13:49 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jorma Karvonen 2007-10-10 16:55:07 UTC
Here below should be "substituted", not "substituded", I suppose.

#: config/tc-msp430.c:1268
#, c-format
msgid "unknown operator (r%s substituded as a register name"
Comment 1 Nick Clifton 2007-10-11 13:49:19 UTC
Hi Jorma,

  I have checked in a patch to fix this, and a few other spelling mistakes in
the tc-msp430.c. file.

Cheers
  Nick

gas/ChangeLog

	PR gas/5155
	* config/tc-msp430.c: Fix spelling typos.