PR gas/5155 * config/tc-msp430.c: Fix spelling typos.